Update total supply and the note.

--- a/depc-technical-solution.tex
+++ b/depc-technical-solution.tex
@@ -4,11 +4,11 @@
 \end{flushleft}
 \section{DEPINC Distribution and Mining Mechanism}
 \begin{flushleft}
-    \textit{Please note: some of the chain parameters are updated after DEPINC upgrade to Chia's consensus. Check the chapter ``Update to Chia consensus''.}
+    \textit{Please note: some of the chain parameters are upgraded after DEPINC upgrade to Chia's consensus (DePC009 DePC010). Check the chapters ``Update to Chia consensus'' - ``4.6 Economic model'' and ``5.1 Upgrade content''.}
 \end{flushleft}
 \begin{tabular}{ p{4cm} p{8cm} }
     \hline
-    \textbf{Total supply}                           & 21 million                                                                                               \\[5pt]
+    \textbf{Total supply}                           & 21 million (63 million after DePC009)                                                                       \\[5pt]
     \rowcolor{lightgray!30}\textbf{Development team}   & $10\%$: 2.1 million. Way: pre-mined                                                                      \\[5pt]
     \textbf{Operation team}                         & $5\%$: 1.05 million. Way: obtain from blocks generated during miners mining                              \\[5pt]
     \rowcolor{lightgray!30}\textbf{Miner}              & $85\%$: 17.85 million. Way: mining                                                                       \\[5pt]
