--- a/tech-roadmap.tex
+++ b/tech-roadmap.tex
@@ -1,14 +1,15 @@
 \chapter{Tech Roadmap}
 \begin{enumerate}
-    \item August 3, 2018: The DEPINC genesis block was mined. It initiated a new mining method, and first month of unconditional storage mining.
-    \item Sep 4, 2018: DEPINC started conditional PoS experiment.
-    \item When the whole network computing power enters a positive growth cycle, adds elastic economic. Model according to the community consensus.
-    \item Capacity size reaches 3000 peta bytes, implements zero knowledge function, improves TPS.
-    \item Capacity size reaches 6000 peta bytes, upgrades PoS consensus.
-    \item Capacity size reaches 10000 peta bytes, builds the stable currency system using capacity as standard, services for the application layer.
     \item In 2023, DEPINC will be compatible with Chia's old agreement documents for mining.
+    \item 2025 Fusion Consensus, DEPC is committed to building a flexible, scalable and integrated decentralized protocol ecosystem to meet future challenges and opportunities.
+    \begin{enumerate}
+        \item Dynamically adjust protocols: Flexibly add or reduce protocols based on future development and market demand to ensure the cutting-edge and adaptability of the ecosystem.
+        \item Expansionary economic mechanism: By expanding the scale of the ecosystem, attracting more users and developers, and promoting the widespread application and healthy development of the protocol.
+        \item DePIN Hub protocol with multiple storage and computing functions: Integrates multiple storage and computing protocols to provide efficient, flexible and secure one-stop decentralized infrastructure solutions.
+    \end{enumerate}
 \end{enumerate}
-\input{graph-roadmap}
+\bigskip
 \begin{flushleft}
     \textit{DEPINC is committed to becoming a high value financial system that changes the way crypto currencies are produced.}
 \end{flushleft}
+\input{graph-roadmap}
