--- a/depc-introduction.tex
+++ b/depc-introduction.tex
@@ -1,5 +1,5 @@
 \chapter{DEPINC Introduction}
-DEPINC is a new crypto currency based on the CPoS(Conditioned Proof of Space) mechanism. By using hard disk as a consensus participant, it can significantly lower energy consumption and entry barrier, making mining of crypto currency safer, more decentralized and for everyone. DEPINC generates its unique value through mathematics and code. This White Paper will explain and elaborate on the monetary and technical attributes of DEPINC.
+DEPINC is a new crypto currency based on the CPoST(Conditioned Proof of Space Time) mechanism. By using hard disk as a consensus participant, it can significantly lower energy consumption and entry barrier, making mining of crypto currency safer, more decentralized and for everyone. DEPINC generates its unique value through mathematics and code. This White Paper will explain and elaborate on the monetary and technical attributes of DEPINC.
 \section{Crypto Currency}
 \begin{flushleft}
     When it comes to crypto currency, before the well-known Bitcoin, the entire crypto community has begun to experiment on a better international payment channel, such as Dai-Wei's Ripple and B-Money.
@@ -23,7 +23,7 @@ DEPINC is a new crypto currency based on the CPoS(Conditioned Proof of Space) me
     We can put a summary on Bitcoin tech features below.
 \end{flushleft}
 \begin{flushleft}
-    Bitcoin was never aggressive on using new tech, but chose to adopt relatively mature technologies to build a safe and reliable Peer-to-Peer cash system.The more validated and simple the technology is, the more secure and trustworthy the system will be. For example, the SHA256 algorithm in Nakamoto consensus, is designed by NSA (US National Security Agency), with proven reliability. It seems that the initial design never considered the current ASIC (Application-Specific Integrated Circuit) and power monopoly issues, but focused on pursuing ultimate system security, even sacrificed some of the high efficiency or high concurrency features of internet.
+    Bitcoin was never aggressive on using new tech, but chose to adopt relatively mature technologies to build a safe and reliable Peer-to-Peer cash system. The more validated and simple the technology is, the more secure and trustworthy the system will be. For example, the SHA256 algorithm in Nakamoto consensus, is designed by NSA (US National Security Agency), with proven reliability. It seems that the initial design never considered the current ASIC (Application-Specific Integrated Circuit) and power monopoly issues, but focused on pursuing ultimate system security, even sacrificed some of the high efficiency or high concurrency features of internet.
 \end{flushleft}
 \section{Seeking Alternatives}
 \begin{flushleft}
