--- a/depc-technical-solution.tex
+++ b/depc-technical-solution.tex
@@ -1,6 +1,6 @@
 \chapter{DEPINC's Technical Solution}
 \begin{flushleft}
-    DEPINC uses PoS as the basis of its consensus mechanism, it ensures sound development of the entire crypto currency by designing a long-term incentive economic model. At the same time, it has made some improvements to the existing PoS and upgraded it to the CPoS consensus.
+    DEPINC uses PoS as the basis of its consensus mechanism, it ensures sound development of the entire crypto currency by designing a long-term incentive economic model. At the same time, it has made some improvements to the existing PoS and upgraded it to the CPoST consensus.
 \end{flushleft}
 \section{DEPINC Distribution and Mining Mechanism}
 \begin{flushleft}
@@ -23,18 +23,18 @@
     In the first month, after mining of the genesis block, miner can mine with no condition limitation. From the second month onwards, the $30\%$ return that does not meet the conditional capacity mining revenue remains the same. For the remaining $70\%$, $43\%$ is directly accumulated to the next eligible conditional address, and the remaining $27\%$ is allocated to the DEPINC Development Foundation. For every 33,600 blocks (about 10 weeks) after, the DEPINC Development Foundation's revenue will be reduced by $2\%$, and the partial accumulation will be reduced to the next block that meets the conditions for mining. By the first halving, the DEPINC Foundation's revenue will be reduced to $5\%$ and stay at that amount. $65\%$ of the income that does not meet the conditional capacity mining will accumulating to the next block that meets the conditional mining; If the conditions are satisfied, miner would get $95\%$ of the mining reward, then the $5\%$ remaining reward would go to the foundation for marketing.
 \end{flushleft}
 \begin{flushleft}
-    Conditioned Proof of Space, or CPoS, would lead the miners, mining pools, the foundation and other participants to engage in a positive business cycle, so that the whole system would always have a dominant temporary commercial vested beneficiary (this vested beneficiary could change with variables such as time, price and mining difficulty) to promote the whole ecosystem.
+    Conditioned Proof of Space Time, or CPoST, would lead the miners, mining pools, the foundation and other participants to engage in a positive business cycle, so that the whole system would always have a dominant temporary commercial vested beneficiary (this vested beneficiary could change with variables such as time, price and mining difficulty) to promote the whole ecosystem.
 \end{flushleft}
 \section{DEPINC Economic Model}
 \begin{flushleft}
-    DEPINC's economic model / consensus mechanism has been upgraded based on the Burst PoS2 (Proof of Space), and is called: CPoS (Conditioned-Proof of Space).
+    DEPINC's economic model / consensus mechanism has been upgraded based on the Burst PoS2 (Proof of Space), and is called: CPoST (Conditioned-Proof of Space Time).
 \end{flushleft}
 \begin{flushleft}
     The model will solve the problems listed below:
 \end{flushleft}
 \subsection{Economic Model Attack}
 \begin{flushleft}
-    The main purpose of miners mining is the payback period, and the benefits will inevitably lead to the sale of all mining output, resulting in market crash, lower prices and thinner profits. The CPoS mining model binds miner to its ecosystem, and uses output of mining as future input of mining, to make the entire DEPINC system grow automatically.
+    The main purpose of miners mining is the payback period, and the benefits will inevitably lead to the sale of all mining output, resulting in market crash, lower prices and thinner profits. The CPoST mining model binds miner to its ecosystem, and uses output of mining as future input of mining, to make the entire DEPINC system grow automatically.
 \end{flushleft}
 \subsection{POW High Maintenance Cost}
 \begin{flushleft}
@@ -46,11 +46,11 @@
 \end{flushleft}
 \subsection{Mining Machine Monopoly}
 \begin{flushleft}
-    The POW consensus mechanism will inevitably lead to a race for mining machines. In order to obtain higher hash power, special-purpose mining machines with higher performance will be developed inevitably, and ordinary people cannot participate in mining. The CPoS mechanism is much more accessible because of slow iteration of hard disk manufacturers and low entry barrier. In traditional businesses, the vendor is normally not a competitor to users. But in the PoW systems, the ASIC manufacturer is the biggest miner. It can be easily understood that the miner's competitor is the miner's vendor, since device suppliers take most of the profit by providing mining machines, miner is radically the risk-free arbitrage of ASIC manufacturers.
+    The POW consensus mechanism will inevitably lead to a race for mining machines. In order to obtain higher hash power, special-purpose mining machines with higher performance will be developed inevitably, and ordinary people cannot participate in mining. The CPoST mechanism is much more accessible because of slow iteration of hard disk manufacturers and low entry barrier. In traditional businesses, the vendor is normally not a competitor to users. But in the PoW systems, the ASIC manufacturer is the biggest miner. It can be easily understood that the miner's competitor is the miner's vendor, since device suppliers take most of the profit by providing mining machines, miner is radically the risk-free arbitrage of ASIC manufacturers.
 \end{flushleft}
 \subsection{Power Resources Monopoly}
 \begin{flushleft}
-    The power resources monopoly leads to no PoW ecosystem expansion, as the cost of mining exceeds the return. For those CPoS miners, the hard disks have much lower power requirement, thus the return of mining is higher. The linear hedge ratio of civil computer hardware can also be taken into consideration to ensure that miners can hedge the price fluctuation risk in the secondary market under the condition of relative safety and cost protection.
+    The power resources monopoly leads to no PoW ecosystem expansion, as the cost of mining exceeds the return. For those CPoST miners, the hard disks have much lower power requirement, thus the return of mining is higher. The linear hedge ratio of civil computer hardware can also be taken into consideration to ensure that miners can hedge the price fluctuation risk in the secondary market under the condition of relative safety and cost protection.
 \end{flushleft}
 \section{DEPINC Architecture and Consensus Mechanism}
 \begin{flushleft}
@@ -75,7 +75,7 @@
     The wallet client could implement any latest developments from the Bitcoin community: lightning network, script upgrades, and much more. The interface standard is kept same as that of Bitcoin, allowing users to integrate easily.
 \end{flushleft}
 \begin{flushleft}
-    The CPoS ecosystem model includes mining pool, miner, crypto currency holder, wallet, exchanges and hardware vendor. The positive inner cycle and entrance of outside resources would bring expansion and development to this ecosystem, the rising price of DEPINC would attract more miners; more miners coming to the system will lead to further price increase.
+    The CPoST ecosystem model includes mining pool, miner, crypto currency holder, wallet, exchanges and hardware vendor. The positive inner cycle and entrance of outside resources would bring expansion and development to this ecosystem, the rising price of DEPINC would attract more miners; more miners coming to the system will lead to further price increase.
 \end{flushleft}
 \begin{flushleft}
     The cost of PoW is influenced by four factors: cost of dishonesty, cost of mining, level of difficulty and cost of mining devices. In the end, the PoW would become another low gross margin industry, the former windfall profits was because of insufficient scale, fluctuation of secondary market and limited device vendors.
@@ -84,7 +84,7 @@
     When it comes to PoS, due to the relatively low power consumption by hardware, miners can obtain other coins in the future symbiotic ecosystem of PoS almost free of charge without any risk.
 \end{flushleft}
 \begin{flushleft}
-    The CPoS system, could give miners the choice to have most of the profits, incur cost for them to be the holder of other PoS coins, and avoid any malicious act. At the same time, the CPoS system attaches great importance to the release of distributional right and packaging right without barrier, which brings equity to the system. DEPINC network architecture and the participants:
+    The CPoST system, could give miners the choice to have most of the profits, incur cost for them to be the holder of other PoS coins, and avoid any malicious act. At the same time, the CPoST system attaches great importance to the release of distributional right and packaging right without barrier, which brings equity to the system. DEPINC network architecture and the participants:
 \end{flushleft}
 \begin{flushleft}
     \centering\textbf{DEPINC network architecture}
