--- a/depc-white_paper.tex
+++ b/depc-white_paper.tex
@@ -4,7 +4,7 @@
 \usepackage{tikz}
 \usepackage{svg}
 \author{DEPINC Core Team}
-\title{\includesvg{depc_logo}\\ \Huge\textbf{DEPINC}\\\Large\textit{The Crypto Currency System Based on CPoS}}
+\title{\includesvg{depc_logo}\\ \Huge\textbf{DEPINC}\\\Large\textit{The Crypto Currency System Based on CPoST}}
 \begin{document}
 \maketitle
 \tableofcontents
