Update write-paper with DePINC new destination.

--- a/depc-ip010.tex
+++ b/depc-ip010.tex
@@ -2,7 +2,7 @@
 \section{Upgrade content}
 \begin{flushleft}
     \begin{enumerate}
-        \item DEPINC renamed as DePC.
+        \item DePINC renamed as DePC.
         \item Starting from the hard fork, each of the block reward will be tripled.
         \item 30 days after the start of the hard fork, all coins before DePCIP009 fork height will not be able to be spent and will be destroyed within few days.
         \item Fixed time interval between blocks to 3 minutes.
