--- a/tech-roadmap.tex
+++ b/tech-roadmap.tex
@@ -1,6 +1,6 @@
 \chapter{Tech Roadmap}
 \begin{enumerate}
-    \item In 2023, DEPINC will be compatible with Chia's old agreement documents for mining.
+    \item In 2023, DePINC will be compatible with Chia's old agreement documents for mining.
     \item 2025 Fusion Consensus, DEPC is committed to building a flexible, scalable and integrated decentralized protocol ecosystem to meet future challenges and opportunities.
     \begin{enumerate}
         \item Dynamically adjust protocols: Flexibly add or reduce protocols based on future development and market demand to ensure the cutting-edge and adaptability of the ecosystem.
@@ -10,6 +10,6 @@
 \end{enumerate}
 \bigskip
 \begin{flushleft}
-    \textit{DEPINC is committed to becoming a high value financial system that changes the way crypto currencies are produced.}
+    \textit{DePINC is committed to becoming a high value financial system that changes the way crypto currencies are produced.}
 \end{flushleft}
 \input{graph-roadmap}
