--- a/depc-introduction.tex
+++ b/depc-introduction.tex
@@ -1,5 +1,5 @@
-\chapter{DEPINC Introduction}
-DEPINC is a new crypto currency based on the CPoST(Conditioned Proof of Space Time) mechanism. By using hard disk as a consensus participant, it can significantly lower energy consumption and entry barrier, making mining of crypto currency safer, more decentralized and for everyone. DEPINC generates its unique value through mathematics and code. This White Paper will explain and elaborate on the monetary and technical attributes of DEPINC.
+\chapter{DePINC Introduction}
+DePINC is a new crypto currency based on the CPoST(Conditioned Proof of Space Time) mechanism. By using hard disk as a consensus participant, it can significantly lower energy consumption and entry barrier, making mining of crypto currency safer, more decentralized and for everyone. DePINC generates its unique value through mathematics and code. This White Paper will explain and elaborate on the monetary and technical attributes of DePINC.
 \section{Crypto Currency}
 \begin{flushleft}
     When it comes to crypto currency, before the well-known Bitcoin, the entire crypto community has begun to experiment on a better international payment channel, such as Dai-Wei's Ripple and B-Money.
@@ -30,5 +30,5 @@ DEPINC is a new crypto currency based on the CPoST(Conditioned Proof of Space Ti
     When numerous resources are being used in the mining procedure and costs are gradually increasing, crypto currency enthusiasts have started looking for alternatives to lower power consumption in two different ways: either using new consensus to lower energy cost or using more general apparatus to lower the cost of mass production. The golden age of ASIC mining device and anti-ASIC algorithm implementation had come. The original intention of Ethereum and Monero was to resist ASIC, using a different non-ASIC-friendly consensus to keep the system away from ASIC manufacturers’ manipulation while keeping the energy consumption low. However after a period of time, ASIC manufacturers still found ways to design devices that would work with the corresponding algorithm. Among those ASIC ones, Litecoin has to be mentioned. It started with Scrypt which is an anti-ASIC mining algorithm, and soon ASIC manufacturers started producing ASIC mining devices that could work with Scrypt.
 \end{flushleft}
 \begin{flushleft}
-    DEPINC provides the perfect solution for the issues mentioned above. It brings a method for crypto zealot to make general apparatus while keeping the energy consumption low. Meanwhile, DEPINC maintains a relatively high difficulty level to ensure the stability of the system by using its consensus Proof of Space (abbr. PoS). The PoS consensus used by DEPINC is also one of the most decentralized consensus mechanisms in this era. Compared with the PoW, where hash power rules, the PoS consensus is ruled by storage power, but slightly different from the cloud storage. PoS utilizes hard disks as a more economical consensus method, so that more people can participate in construction of the system-stabilizing hash power with their own devices. It was the original intention of Nakamoto to design PoW, a decentralized system and an innovative path to real decentralization for everyone, raising consciousness in every new comer to think about and overturn the existing design. DEPINC has inherited BTC’s spirit, now the new PoS mechanism is responsible for bringing a better future for crypto currency, and engaging more people in the construction of the economic system.
+    DePINC provides the perfect solution for the issues mentioned above. It brings a method for crypto zealot to make general apparatus while keeping the energy consumption low. Meanwhile, DePINC maintains a relatively high difficulty level to ensure the stability of the system by using its consensus Proof of Space Time (abbr. PoST). The PoST consensus used by DePINC is also one of the most decentralized consensus mechanisms in this era. Compared with the PoW, where hash power rules, the PoST consensus is ruled by storage power, but slightly different from the cloud storage. PoST utilizes hard disks as a more economical consensus method, so that more people can participate in construction of the system-stabilizing hash power with their own devices. It was the original intention of Nakamoto to design PoW, a decentralized system and an innovative path to real decentralization for everyone, raising consciousness in every new comer to think about and overturn the existing design. DePINC has inherited BTC’s spirit, now the new PoST mechanism is responsible for bringing a better future for crypto currency, and engaging more people in the construction of the economic system.
 \end{flushleft}
