--- a/depc-white_paper.tex
+++ b/depc-white_paper.tex
@@ -3,15 +3,13 @@
 \setlength\extrarowheight{5pt}
 \usepackage{tikz}
 \usepackage{svg}
-\author{DEPINC Core Team}
-\title{\includesvg{depc_logo}\\ \Huge\textbf{DEPINC}\\\Large\textit{The Crypto Currency System Based on CPoST}}
+\author{DePINC Core Team}
+\title{\includesvg{depc_logo}\\ \Huge\textbf{DePINC}\\\Large\textit{The Crypto Currency System Based on CPoST}}
 \begin{document}
 \maketitle
 \tableofcontents
 \include{depc-introduction}
 \include{the-four-major-problems}
 \include{depc-technical-solution}
-\include{depc-ip009}
-\include{depc-ip010}
 \include{tech-roadmap}
 \end{document}
