White paper is improved.

--- a/depc-technical-solution.tex
+++ b/depc-technical-solution.tex
@@ -1,33 +1,4 @@
 \chapter{DePINC's Technical Solution}
-\section{What is DePINC}
-\begin{flushleft}
-    DePINC aims to establish itself as a DePIN Protocol Hub, integrating validated algorithms for storage and computing. By offering a diverse range of flexible protocol combinations, DePINC provides users with efficient, secure, and flexible decentralized infrastructure solutions all in one place.
-\end{flushleft}
-\begin{flushleft}
-    Specifically, DePINC begins with reusable storage protocols. As technology advances, DePINC will gradually expand into more protocols covering areas such as computing and data processing. Through this approach, DePINC is dedicated to constructing a multi-layered, multifunctional decentralized ecosystem that comprehensively supports decentralized services for users.
-\end{flushleft}
-\begin{flushleft}
-    The project's native token is DePC, a novel cryptocurrency based on the CPoST (Conditional Proof of Space Time) consensus mechanism. By involving hard drives as consensus participants, DePINC significantly reduces energy consumption and entry barriers, making the cryptocurrency more secure, decentralized, and accessible to everyone.
-\end{flushleft}
-\begin{flushleft}
-    In comparison to Bitcoin, which utilizes the PoW (Proof of Work) consensus mechanism to establish a secure peer-to-peer system, DePINC addresses the issue of high energy consumption and monopolization of electricity resources. Despite the reliability and simplicity of PoW, it disregards concerns over resource consumption and future energy monopolies. With the increasing resource consumption of Bitcoin, more environmentally friendly consensus protocols have emerged. One such protocol is Proof of Space-Time, which, like PoW, ensures security but with significantly lower energy consumption. DePINC adopts this excellent consensus mechanism as a solution to Bitcoin's high energy consumption issues, ensuring network security, system stability, and a notable reduction in energy consumption.
-\end{flushleft}
-\subsection{Four major challenges}
-\begin{flushleft}
-    \textbf{Cryptocurrencies today still face four major challenges}: monopolization, centralization of computing power, high energy consumption, and shortcomings in the existing PoW mechanism. DePINC has emerged to address these issues. It excels over existing cryptocurrencies in the following aspects:
-\end{flushleft}
-\begin{flushleft}
-    \textbf{Monopoly Issue}: By utilizing hard drives as consensus participants, DePINC reduces the barriers to entry for mining, preventing resources from being concentrated in the hands of a few large miners.
-\end{flushleft}
-\begin{flushleft}
-    \textbf{Centralization of Computing Power}: The PoST mechanism decreases reliance on computational power, enabling more individuals to participate in the network and thereby enhancing decentralization.
-\end{flushleft}
-\begin{flushleft}
-    \textbf{High Energy Consumption}: Compared to PoW, DePINC's CPoST consensus mechanism offers lower energy consumption, promoting environmental sustainability.
-\end{flushleft}
-\begin{flushleft}
-    \textbf{Shortcomings of Existing PoW Mechanism}: DePINC addresses these by integrating the PoST consensus mechanism, comprehensively enhancing system security and stability both technically and within the community.
-\end{flushleft}
 \subsection{Algorithms and mechanism}
 \begin{flushleft}
     DePINC believes that low power consumption can also provide sufficient trust for algorithms, ensuring widespread use of cryptocurrencies in more future scenarios. By integrating multiple efficient protocols, DePINC continues to drive the development of decentralized technology, offering users a better experience and broader application prospects.
@@ -36,25 +7,22 @@
     DePINC's Algorithmic Consensus Mechanism The core proof algorithm of DePINC's consensus protocol is PoST, which utilizes Plot files for mining. This approach supports DePINC and enhances network miners' income through composite security with other similar algorithmic projects.
 \end{flushleft}
 \subsection{The network parameters}
-\begin{tabular}{ p{4cm} p{8cm} }
-    \hline
-    \textbf{Total supply}                           & 84 million                                                                        \\[5pt]
-    \rowcolor{lightgray!30}\textbf{Development team}   & 2.1 million. Way: pre-mined                                                                      \\[5pt]
-    \rowcolor{lightgray!30}\textbf{Miner}              & 80 million. Way: mining                                                                       \\[5pt]
-    \textbf{Avg. block time}                        & 3-4 minutes                                                                                                \\[5pt]
-    \rowcolor{lightgray!30}\textbf{Initial block size} & 15 DePINC / Block, 2MB block size                                                                           \\[5pt]
-    \textbf{Halve period}                           & In 4 years, the first halving time is about 582688 block height                                          \\[5pt]
-    \rowcolor{lightgray!30}\textbf{Current TPS}        & 70 transactions / sec                                                                                    \\[5pt]
-    \textbf{Stake}                                  & Stake amount relate to the computing power. \\[5pt]
-    \rowcolor{lightgray!30}\textbf{No stake}        & Only $10\%$ of the block reward.                                                                                   \\[5pt]
-    \hline
-\end{tabular}
-\begin{flushleft}
-    In the first month, after mining of the genesis block, miner can mine with no condition limitation. From the second month onwards, the $30\%$ return that does not meet the conditional capacity mining revenue remains the same. For the remaining $70\%$, $43\%$ is directly accumulated to the next eligible conditional address, and the remaining $27\%$ is allocated to the DePINC Development Foundation. For every 33,600 blocks (about 10 weeks) after, the DePINC Development Foundation's revenue will be reduced by $2\%$, and the partial accumulation will be reduced to the next block that meets the conditions for mining. By the first halving, the DePINC Foundation's revenue will be reduced to $5\%$ and stay at that amount. $65\%$ of the income that does not meet the conditional capacity mining will accumulating to the next block that meets the conditional mining; If the conditions are satisfied, miner would get $95\%$ of the mining reward, then the $5\%$ remaining reward would go to the foundation for marketing.
-\end{flushleft}
 \begin{flushleft}
     Conditioned Proof of Space Time, or CPoST, would lead the miners, mining pools, the foundation and other participants to engage in a positive business cycle, so that the whole system would always have a dominant temporary commercial vested beneficiary (this vested beneficiary could change with variables such as time, price and mining difficulty) to promote the whole ecosystem.
 \end{flushleft}
+\begin{tabular}{ p{4cm} p{8cm} }
+    \hline
+    \textbf{Total supply}                               & 84 million                                                        \\[5pt]
+    \rowcolor{lightgray!30}\textbf{Development team}    & 2.1 million. Way: pre-mined                                       \\[5pt]
+    \rowcolor{lightgray!30}\textbf{Miner}               & 80 million. Way: mining                                           \\[5pt]
+    \textbf{Avg. block time}                            & 3-4 minutes                                                       \\[5pt]
+    \rowcolor{lightgray!30}\textbf{Initial block size}  & 15 DePINC / Block, 2MB block size                                 \\[5pt]
+    \textbf{Halve period}                               & In 4 years, the first halving time is about 582688 block height   \\[5pt]
+    \rowcolor{lightgray!30}\textbf{Current TPS}         & 70 transactions / sec                                             \\[5pt]
+    \textbf{Stake}                                      & Stake amount relate to the computing power                        \\[5pt]
+    \rowcolor{lightgray!30}\textbf{No stake}            & Only $10\%$ of the block reward.                                  \\[5pt]
+    \hline
+\end{tabular}
 \section{DePINC Economic Model}
 \begin{flushleft}
     DePINC's economic model / consensus mechanism has been upgraded based on the Chia PoST (Proof of Space Time), and is called: CPoST (Conditioned-Proof of Space Time).
@@ -83,35 +51,19 @@
     The power resources monopoly leads to no PoW ecosystem expansion, as the cost of mining exceeds the return. For those CPoST miners, the hard disks have much lower power requirement, thus the return of mining is higher. The linear hedge ratio of civil computer hardware can also be taken into consideration to ensure that miners can hedge the price fluctuation risk in the secondary market under the condition of relative safety and cost protection.
 \end{flushleft}
 \section{DePINC Architecture and Consensus Mechanism}
+\subsection{Bitcoin and Chia}
 \begin{flushleft}
-    The DePINC wallet is derived from Bitcoin and the consensus from Chia's PoST.
+    DePINC is derived from Bitcoin and the consensus from Chia's PoST. Bitcoin started in Jan 2009, the stability of wallet and blockchain is widely accepted after 10 years of iterations, it is safe and reliable to implement the PoS consensus on the Bitcoin QT wallet. DePINC also inherits Bitcoin's excellent P2P network architecture and UTXO system, which is mature and stable. The wallet client could implement any latest developments from the Bitcoin community: lightning network, script upgrades, and much more. The interface standard is kept same as that of Bitcoin, allowing users to integrate easily.
 \end{flushleft}
 \begin{flushleft}
-    Bitcoin started in Jan 2009, the stability of wallet and blockchain is widely accepted after 10 years of iterations, it is safe and reliable to implement the PoS consensus on the Bitcoin QT wallet.
+    Chia started in August 2017. Combining the advantages of Bitcoin and Chia, DePINC has currently become the most reliable public chain with PoST consensus algorithm. Since its launch on August 3rd 2018, DePINC has grown steadily in computing power, withstood numerous tests, attacks, and cracks, and so far no major loopholes have emerged. By adopting the mature PoST mechanism, a stable and reliable consensus mechanism is introduced to build community confidence in the DePINC public chain. Since being compatible with Chia Plot files, miners can get both DePINC and Chia benefits, with only an additional operation.
 \end{flushleft}
-\begin{flushleft}
-    Chia started in August 2017. Combining the advantages of Bitcoin and Chia, DePINC has currently become the most reliable public chain with PoST consensus algorithm.
-\end{flushleft}
-\begin{flushleft}
-    Since its launch on August 3rd 2018, DePINC has grown steadily in computing power, withstood numerous tests, attacks, and cracks, and so far no major loopholes have emerged.
-\end{flushleft}
-\begin{flushleft}
-    By adopting the mature PoST mechanism, a stable and reliable consensus mechanism is introduced to build community confidence in the DePINC public chain. Since being compatible with Chia Plot files, miners can get both DePINC and Chia benefits, with only an additional operation.
-\end{flushleft}
-\begin{flushleft}
-    The DePINC wallet inherits Bitcoin's excellent P2P network architecture and UTXO system, which is mature and stable.
-\end{flushleft}
-\begin{flushleft}
-    The wallet client could implement any latest developments from the Bitcoin community: lightning network, script upgrades, and much more. The interface standard is kept same as that of Bitcoin, allowing users to integrate easily.
-\end{flushleft}
+\subsection{CPoST Model}
 \begin{flushleft}
     The CPoST ecosystem model includes mining pool, miner, crypto currency holder, wallet, exchanges and hardware vendor. The positive inner cycle and entrance of outside resources would bring expansion and development to this ecosystem, the rising price of DePINC would attract more miners; more miners coming to the system will lead to further price increase.
 \end{flushleft}
 \begin{flushleft}
-    The cost of PoW is influenced by four factors: cost of dishonesty, cost of mining, level of difficulty and cost of mining devices. In the end, the PoW would become another low gross margin industry, the former windfall profits was because of insufficient scale, fluctuation of secondary market and limited device vendors.
-\end{flushleft}
-\begin{flushleft}
-    When it comes to PoST, due to the relatively low power consumption by hardware, miners can obtain other coins in the future symbiotic ecosystem of PoST almost free of charge without any risk.
+    The cost of PoW is influenced by four factors: cost of dishonesty, cost of mining, level of difficulty and cost of mining devices. In the end, the PoW would become another low gross margin industry, the former windfall profits was because of insufficient scale, fluctuation of secondary market and limited device vendors. When it comes to PoST, due to the relatively low power consumption by hardware, miners can obtain other coins in the future symbiotic ecosystem of PoST almost free of charge without any risk.
 \end{flushleft}
 \begin{flushleft}
     The CPoST system, could give miners the choice to have most of the profits, incur cost for them to be the holder of other PoST coins, and avoid any malicious act. At the same time, the CPoST system attaches great importance to the release of distributional right and packaging right without barrier, which brings equity to the system. DePINC network architecture and the participants:
@@ -137,7 +89,7 @@
 \begin{flushleft}
     Receives the block, verifies it.
 \end{flushleft}
-\subsection{Plotting - Create Plot File}
+\subsection{Principle and algorithms}
 \subsubsection{Algorithms and acronyms}
 \begin{flushleft}
     Decenterialized consensus algorithms require to consume scarce resources, such as computing power, staked money and storage space. DePINC is continuing to use storage space to secure the network. Timelord has been added to provide a reliable cryptographic. By adding timelord to increase the security of entired network.
