--- a/tech-roadmap.tex
+++ b/tech-roadmap.tex
@@ -1,4 +1,5 @@
 \chapter{Tech Roadmap}
+\section{Fusion Consensus}
 \begin{enumerate}
     \item In 2023, DePINC will be compatible with Chia's old agreement documents for mining.
     \item 2025 Fusion Consensus, DEPC is committed to building a flexible, scalable and integrated decentralized protocol ecosystem to meet future challenges and opportunities.
@@ -8,7 +9,8 @@
         \item DePIN Hub protocol with multiple storage and computing functions: Integrates multiple storage and computing protocols to provide efficient, flexible and secure one-stop decentralized infrastructure solutions.
     \end{enumerate}
 \end{enumerate}
-\bigskip
+\pagebreak
+\section{Outlook}
 \begin{flushleft}
     \textit{DePINC is committed to becoming a high value financial system that changes the way crypto currencies are produced.}
 \end{flushleft}
