--- a/tech-roadmap.tex
+++ b/tech-roadmap.tex
@@ -2,7 +2,7 @@
 \section{Fusion Consensus}
 \begin{enumerate}
     \item In 2023, DePINC will be compatible with Chia's old agreement documents for mining.
-    \item 2025 Fusion Consensus, DEPC is committed to building a flexible, scalable and integrated decentralized protocol ecosystem to meet future challenges and opportunities.
+    \item 2025 Fusion Consensus, DePINC is committed to building a flexible, scalable and integrated decentralized protocol ecosystem to meet future challenges and opportunities.
     \begin{enumerate}
         \item Dynamically adjust protocols: Flexibly add or reduce protocols based on future development and market demand to ensure the cutting-edge and adaptability of the ecosystem.
         \item Expansionary economic mechanism: By expanding the scale of the ecosystem, attracting more users and developers, and promoting the widespread application and healthy development of the protocol.
