--- a/depc-technical-solution.tex
+++ b/depc-technical-solution.tex
@@ -362,12 +362,12 @@
 \end{flushleft}
 \begin{tabular}{ |p{5cm}|p{3cm}|p{3.5cm}| }
     \hline
-    \rowcolor{lightgray}\textbf{Period} & \textbf{Ratio} & \textbf{$1_{DePC}$ required} \\[5pt]
+    \rowcolor{lightgray}\textbf{Period} & \textbf{Ratio} & \textbf{$1_{DEPC}$ required} \\[5pt]
     \hline
-    Current Deposit (1 week)            & $8\%$          & $12.5_{DePC}$                \\[5pt]
-    \rowcolor{lightgray!30} 1 year      & $20\%$         & $5_{DePC}$                   \\[5pt]
-    2 years                             & $50\%$         & $2_{DePC}$                   \\[5pt]
-    \rowcolor{lightgray!30} 3 years     & $100\%$        & $1_{DePC}$                   \\[5pt]
+    Current Deposit (1 week)            & $8\%$          & $12.5_{DEPC}$                \\[5pt]
+    \rowcolor{lightgray!30} 1 year      & $20\%$         & $5_{DEPC}$                   \\[5pt]
+    2 years                             & $50\%$         & $2_{DEPC}$                   \\[5pt]
+    \rowcolor{lightgray!30} 3 years     & $100\%$        & $1_{DEPC}$                   \\[5pt]
     \hline
 \end{tabular}
 \subsubsection{Burn}
